# CharacterGeneratorCyberpunk2020

./: .gitignore  main.py  pyproject.toml  setup.cfg
src/: character_factory.py  event.py  family.py
src/character/: character_statistics.py  character_story.py
src/events/: __init__.py  fact.py  friends.py  romantic.py
src/utils/: __init__.py  human.py  roll.py
